# X-ARM

./: .gitignore  LDScript.ld  LICENSE  Makefile  README.md  TemplateInfo.plist  main.c  package.py  setup.py
Resouces/: CMakeLists.txt
Resources/: Icon.icns
Templates/STM32CubeLLVM/: Makefile  TemplateInfo.plist  build.make  ccflags.make  cflags.make  clean.make  definition.make  ldflags.make  upload.make
Templates/STM32CubeMX/: TemplateInfo.plist
Templates/XarmBasic/: LDScript.ld  Makefile  Makefile.tpl  TemplateInfo.plist.tpl  ___VARIABLE_MCU____conf.h  main.c  startup_stm32f0xx.c
Templates/XarmCube/: TemplateInfo.plist
Templates/XarmFiles/: TemplateInfo.plist.tpl
